# SlotMachine

./: Game.h  Player.cpp  Player.h  README.md  Reel.cpp  Reel.h  SlotMachine.cpp  SlotMachine.h  Symbol.cpp  Symbol.h  Utils.cpp  Utils.h  main.cpp
SlotMachine/: CMakeLists.txt  CppProperties.json  Game.cpp  Player.cpp  Reel.cpp  Reel.h  SlotMachine.cpp
